--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "sass": "^1.56.1",
+    "swiper": "^8.4.5",
     "vite": "^3.2.3"
   }
 }
